--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "globalEnv": ["OS", "RUNNER_OS"],
+  "globalEnv": ["OS", "RUNNER_OS", "NODE_ENV"],
+  "cacheDir": ".cache/turbo",
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
