--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "repository": "https://github.com/aminya/setup-cpp",
   "license": "Apache-2.0",
   "author": "Amin Yahyaabadi",
-  "main": "dist/legacy/setup-cpp.js",
-  "modern": "./dist/modern/setup-cpp.mjs",
-  "source": "./src/setup-cpp.ts",
+  "main": "dist/legacy/lib.js",
+  "modern": "./dist/modern/lib.mjs",
+  "source": "./src/lib.ts",
   "bin": {
     "setup-cpp": "dist/legacy/setup-cpp.js"
   },
@@ -46,9 +46,11 @@
     "tsconfig.json"
   ],
   "scripts": {
-    "build": "run-s clean && turbo build && run-p lint.root.tsc build.vite.modern build.vite.legacy && run-p build.json build.bash",
-    "build.vite.modern": "cross-env NODE_ENV=production vite build --mode cli-modern",
-    "build.vite.legacy": "cross-env NODE_ENV=production vite build --mode cli-legacy",
+    "build": "run-s clean && turbo build && run-p lint.root.tsc build.cli.modern build.cli.legacy build.library.modern build.library.legacy && run-p build.json build.bash",
+    "build.cli.modern": "swc ./src/setup-cpp.ts --out-file ./dist/modern/setup-cpp.mjs --config-file ./swc.modern.json && sed -i 's|./lib.ts|./lib.mjs|g' ./dist/modern/setup-cpp.mjs",
+    "build.cli.legacy": "swc ./src/setup-cpp.ts --out-file ./dist/legacy/setup-cpp.js --config-file ./swc.legacy.json && sed -i 's|./lib.ts|./lib.js|g' ./dist/legacy/setup-cpp.js",
+    "build.library.modern": "cross-env NODE_ENV=production vite build --mode library-modern",
+    "build.library.legacy": "cross-env NODE_ENV=production vite build --mode library-legacy",
     "build.json": "shx cp ./src/*/*.json ./dist/legacy/ && shx cp ./dist/legacy/*.json ./dist/modern && minijson --file ./dist/**/*.json",
     "build.bash": "shx cp ./src/*/*.bash ./dist/legacy/ && shx cp ./dist/legacy/*.bash ./dist/modern",
     "bump": "ncu -u -x execa,numerous,eslint,@types/eslint,which && pnpm update && pnpx typesync && pnpm run clean",
@@ -80,6 +82,10 @@
     "test": "turbo test && jest --runInBand --forceExit --coverage",
     "build.docker-ci": "node ./dev/docker/ci/docker-ci.mjs"
   },
+  "dependencies": {
+    "mri": "^1.2.0",
+    "simple-update-notifier": "^2.0.0"
+  },
   "devDependencies": {
     "@actions/cache": "^4.0.2",
     "@actions/core": "^1.11.1",
@@ -99,6 +105,7 @@
     "@octokit/rest": "^21.1.1",
     "@octokit/types": "^13.8.0",
     "@shockpkg/archive-files": "3.2.5",
+    "@swc/cli": "^0.6.0",
     "@swc/jest": "^0.2.37",
     "@types/babel__core": "~7.20.5",
     "@types/cross-spawn": "^6.0.6",
@@ -137,7 +144,6 @@
     "macos-release": "^3.3.0",
     "memoizee": "^0.4.17",
     "mkdirp": "^3.0.1",
-    "mri": "^1.2.0",
     "msvc-dev-cmd": "github:aminya/msvc-dev-cmd#c01f519bd995460228ed3dec4df51df92dc290fd",
     "node-downloader-helper": "2.1.9",
     "npm-check-updates": "^17.1.16",
@@ -154,12 +160,11 @@
     "rollup": "^4.34.9",
     "safe-stable-stringify": "^2.5.0",
     "semver": "7.7.1",
-    "setup-apt": "workspace:*",
     "setup-alpine": "workspace:*",
+    "setup-apt": "workspace:*",
     "setup-brew": "workspace:*",
     "setup-python": "github:aminya/setup-python#9700887",
     "shx": "0.4.0",
-    "simple-update-notifier": "^2.0.0",
     "terser": "^5.39.0",
     "terser-config-atomic": "^1.0.0",
     "time-delta": "github:aminya/time-delta#69d91a4",
