--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
   ],
   "scripts": {
     "build": "run-s clean && turbo build && run-p lint.root.tsc build.cli.modern build.cli.legacy build.library.modern build.library.legacy && run-p build.json build.bash",
-    "build.cli.modern": "swc ./src/setup-cpp.ts --out-file ./dist/modern/setup-cpp.mjs --config-file ./swc.modern.json && sed -i 's|./lib.ts|./lib.mjs|g' ./dist/modern/setup-cpp.mjs",
-    "build.cli.legacy": "swc ./src/setup-cpp.ts --out-file ./dist/legacy/setup-cpp.js --config-file ./swc.legacy.json && sed -i 's|./lib.ts|./lib.js|g' ./dist/legacy/setup-cpp.js",
+    "build.cli.modern": "vite build --mode cli-deps-modern && swc ./src/setup-cpp.ts --out-file ./dist/modern/setup-cpp.mjs --config-file ./swc.modern.json && sed -i 's|.ts\"|.mjs\"|g' ./dist/modern/setup-cpp.mjs",
+    "build.cli.legacy": "vite build --mode cli-deps-legacy && swc ./src/setup-cpp.ts --out-file ./dist/legacy/setup-cpp.js --config-file ./swc.legacy.json && sed -i 's|.ts\"|.js\"|g' ./dist/legacy/setup-cpp.js",
     "build.library.modern": "cross-env NODE_ENV=production vite build --mode library-modern",
     "build.library.legacy": "cross-env NODE_ENV=production vite build --mode library-legacy",
     "build.json": "shx cp ./src/*/*.json ./dist/legacy/ && shx cp ./dist/legacy/*.json ./dist/modern && minijson --file ./dist/**/*.json",
@@ -81,10 +81,6 @@
     "test.docker": "tsx ./dev/docker/ci/tests/index.mts",
     "test": "turbo test && jest --runInBand --forceExit --coverage",
     "build.docker-ci": "node ./dev/docker/ci/docker-ci.mjs"
-  },
-  "dependencies": {
-    "mri": "^1.2.0",
-    "simple-update-notifier": "^2.0.0"
   },
   "devDependencies": {
     "@actions/cache": "^4.0.2",
@@ -180,7 +176,9 @@
     "vite": "^6.2.0",
     "vite-plugin-babel": "^1.3.0",
     "web-streams-polyfill": "^4.1.0",
-    "which": "^4.0.0"
+    "which": "^4.0.0",
+    "mri": "^1.2.0",
+    "simple-update-notifier": "^2.0.0"
   },
   "productionDependencies": [
     "@actions/core",
@@ -221,7 +219,9 @@
     "web-streams-polyfill",
     "timers-browserify",
     "fs-extra",
-    "randomuuid-polyfill"
+    "randomuuid-polyfill",
+    "mri",
+    "simple-update-notifier"
   ],
   "engines": {
     "node": ">=12.x",
