--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "macos-release": "^3.3.0",
     "memoizee": "^0.4.17",
     "mkdirp": "^3.0.1",
+    "mri": "^1.2.0",
     "msvc-dev-cmd": "github:aminya/msvc-dev-cmd#c01f519bd995460228ed3dec4df51df92dc290fd",
     "node-downloader-helper": "2.1.9",
     "npm-check-updates": "^18.0.0",
@@ -141,6 +142,7 @@
     "setup-brew": "workspace:*",
     "setup-python": "github:aminya/setup-python#9700887",
     "shx": "0.4.0",
+    "simple-update-notifier": "^2.0.0",
     "terser": "^5.39.0",
     "terser-config-atomic": "^1.0.0",
     "time-delta": "github:aminya/time-delta#69d91a4",
@@ -156,9 +158,7 @@
     "vite": "^6.2.0",
     "vite-plugin-babel": "^1.3.0",
     "web-streams-polyfill": "^4.1.0",
-    "which": "^4.0.0",
-    "mri": "^1.2.0",
-    "simple-update-notifier": "^2.0.0"
+    "which": "^4.0.0"
   },
   "productionDependencies": [
     "@actions/core",
@@ -207,7 +207,7 @@
     "node": ">=12.x",
     "pnpm": "^10"
   },
-  "packageManager": "pnpm@10.9.0",
+  "packageManager": "pnpm@10.10.0",
   "workspaces": [
     "packages/*"
   ],
