--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -86,7 +86,7 @@ jobs:
       matrix:
         os:
           - windows-2019
-          - ubuntu-20.04
+          - ubuntu-22.04
           - ubuntu-22.04-arm
           - macos-13 # x64
           - macos-14 # arm64
@@ -163,7 +163,7 @@ jobs:
           - ubuntu-24.04
           - ubuntu-22.04-arm
           - ubuntu-22.04
-          - ubuntu-20.04
+          # - ubuntu-20.04
           - macos-15 # arm64
           # - macos-15-large # x64
           - macos-14 # arm64
