--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "tsconfig.json"
   ],
   "scripts": {
-    "build": "run-s clean && pnpm -r build && run-p build.types.modern lint.root.tsc build.cli.modern build.cli.legacy build.library && run-p build.json build.bash",
+    "build": "turbo build && run-p build.types.modern lint.root.tsc build.cli.modern build.cli.legacy build.library && run-p build.json build.bash",
     "build.cli.modern": "cross-env NODE_ENV=production vite build --mode cli-modern",
     "build.cli.legacy": "cross-env NODE_ENV=production vite build --mode cli-legacy",
     "build.library": "cross-env NODE_ENV=production vite build --mode library",
@@ -150,7 +150,7 @@
     "ts-node": "^10.9.2",
     "ts-readme": "^1.1.3",
     "tsx": "^4.19.3",
-    "turbo": "2.4.4",
+    "turbo": "2.5.3",
     "typescript": "^5.8.2",
     "ubuntu-version": "^2.0.0",
     "untildify-user": "workspace:*",
