test: add import tests for all packages

--- a/packages/setup-apt/package.json
+++ b/packages/setup-apt/package.json
@@ -17,6 +17,7 @@
   "scripts": {
     "build": "tsc --pretty",
     "dev": "tsc --watch --pretty",
+    "lint.tsc.test": "tsc --noEmit --pretty -p ./__tests__/tsconfig.json",
     "lint.tsc": "tsc --noEmit --pretty",
     "lint.eslint": "eslint '**/*.{ts,tsx,js,jsx,cjs,mjs,json,yaml}' --no-error-on-unmatched-pattern --cache --cache-location ./.cache/eslint/ --fix",
     "prepublishOnly": "pnpm run build",
