--- a/packages/envosman/package.json
+++ b/packages/envosman/package.json
@@ -12,9 +12,11 @@
   "scripts": {
     "build": "tsc --pretty",
     "dev": "tsc --watch --pretty",
+    "lint.tsc.test": "tsc --noEmit --pretty -p ./__tests__/tsconfig.json",
     "lint.tsc": "tsc --noEmit --pretty",
     "lint.eslint": "eslint '**/*.{ts,tsx,js,jsx,cjs,mjs,json,yaml}' --no-error-on-unmatched-pattern --cache --cache-location ./.cache/eslint/ --fix",
-    "prepublishOnly": "pnpm run build"
+    "prepublishOnly": "pnpm run build",
+    "test": "jest --coverage"
   },
   "dependencies": {
     "@actions/core": "^1.10.1",
