--- a/packages/setup-apt/package.json
+++ b/packages/setup-apt/package.json
@@ -21,7 +21,7 @@
     "lint.tsc": "tsc --noEmit --pretty",
     "lint.eslint": "eslint '**/*.{ts,tsx,js,jsx,cjs,mjs,json,yaml}' --no-error-on-unmatched-pattern --cache --cache-location ./.cache/eslint/ --fix",
     "prepublishOnly": "pnpm run build",
-    "test": "jest --coverage"
+    "test": "jest --coverage --runInBand"
   },
   "dependencies": {
     "@types/node": "22.15.3",
