--- a/src/llvm/github_llvm_llvm-project.json
+++ b/src/llvm/github_llvm_llvm-project.json
@@ -1,6 +1,21 @@
 {
+  "llvmorg-20.1.7": [
+    "clang+llvm-20.1.7-x86_64-pc-windows-msvc.tar.xz",
+    "LLVM-20.1.7-win64.exe",
+    "LLVM-20.1.7-win32.exe",
+    "LLVM-20.1.7-macOS-X64.tar.xz",
+    "LLVM-20.1.7-macOS-ARM64.tar.xz",
+    "LLVM-20.1.7-Linux-X64.tar.xz",
+    "LLVM-20.1.7-Linux-ARM64.tar.xz"
+  ],
   "llvmorg-20.1.6": [
+    "clang+llvm-20.1.7-armv7a-linux-gnueabihf.tar.gz",
+    "clang+llvm-20.1.7-aarch64-pc-windows-msvc.tar.xz",
     "clang+llvm-20.1.6-x86_64-pc-windows-msvc.tar.xz",
+    "clang+llvm-20.1.6-armv7a-linux-gnueabihf.tar.gz",
+    "clang+llvm-20.1.6-aarch64-pc-windows-msvc.tar.xz",
+    "LLVM-20.1.7-woa64.exe",
+    "LLVM-20.1.6-woa64.exe",
     "LLVM-20.1.6-win64.exe",
     "LLVM-20.1.6-win32.exe",
     "LLVM-20.1.6-Linux-X64.tar.xz",
