--- a/action.yml
+++ b/action.yml
@@ -166,6 +166,9 @@ inputs:
   git:
     description: "Wether to install git (true/false) or the specific version to install."
     required: false
+  tar:
+    description: "Wether to install tar (true/false) or the specific version to install."
+    required: false
 
 runs:
   using: "node20"
