--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "setup-brew": "workspace:*",
     "setup-python": "github:aminya/setup-python#9700887",
     "shx": "0.4.0",
+    "simple-update-notifier": "^2.0.0",
     "time-delta": "github:aminya/time-delta#69d91a4",
     "timers-browserify": "^2.0.12",
     "ts-node": "^10.9.2",
@@ -175,7 +176,6 @@
     "setup-alpine",
     "setup-brew",
     "setup-python",
-    "simple-update-notifier",
     "time-delta",
     "ubuntu-version",
     "untildify-user",
