--- a/src/llvm/github_llvm_llvm-project.json
+++ b/src/llvm/github_llvm_llvm-project.json
@@ -1,6 +1,77 @@
 {
+  "llvmorg-21.1.5": [
+    "clang+llvm-21.1.5-x86_64-pc-windows-msvc.tar.xz",
+    "LLVM-21.1.5-win64.exe",
+    "LLVM-21.1.5-win32.exe",
+    "LLVM-21.1.5-Linux-X64.tar.xz",
+    "LLVM-21.1.5-Linux-ARM64.tar.xz"
+  ],
+  "llvmorg-21.1.4": [
+    "clang+llvm-21.1.4-x86_64-pc-windows-msvc.tar.xz",
+    "clang+llvm-21.1.4-armv7a-linux-gnueabihf.tar.gz",
+    "clang+llvm-21.1.4-aarch64-pc-windows-msvc.tar.xz",
+    "LLVM-21.1.4-woa64.exe",
+    "LLVM-21.1.4-win64.exe",
+    "LLVM-21.1.4-win32.exe",
+    "LLVM-21.1.4-Linux-X64.tar.xz",
+    "LLVM-21.1.4-Linux-ARM64.tar.xz"
+  ],
+  "llvmorg-21.1.3": [
+    "clang+llvm-21.1.3-x86_64-pc-windows-msvc.tar.xz",
+    "clang+llvm-21.1.3-armv7a-linux-gnueabihf.tar.gz",
+    "clang+llvm-21.1.3-aarch64-pc-windows-msvc.tar.xz",
+    "LLVM-21.1.3-woa64.exe",
+    "LLVM-21.1.3-win64.exe",
+    "LLVM-21.1.3-win32.exe",
+    "LLVM-21.1.3-Linux-X64.tar.xz",
+    "LLVM-21.1.3-Linux-ARM64.tar.xz"
+  ],
+  "llvmorg-21.1.2": [
+    "clang+llvm-21.1.2-x86_64-pc-windows-msvc.tar.xz",
+    "clang+llvm-21.1.2-armv7a-linux-gnueabihf.tar.gz",
+    "clang+llvm-21.1.2-aarch64-pc-windows-msvc.tar.xz",
+    "LLVM-21.1.2-woa64.exe",
+    "LLVM-21.1.2-win64.exe",
+    "LLVM-21.1.2-win32.exe",
+    "LLVM-21.1.2-Linux-X64.tar.xz",
+    "LLVM-21.1.2-Linux-ARM64.tar.xz"
+  ],
+  "llvmorg-21.1.1": [
+    "clang+llvm-21.1.1-x86_64-pc-windows-msvc.tar.xz",
+    "clang+llvm-21.1.1-armv7a-linux-gnueabihf.tar.gz",
+    "clang+llvm-21.1.1-aarch64-pc-windows-msvc.tar.xz",
+    "LLVM-21.1.1-woa64.exe",
+    "LLVM-21.1.1-win64.exe",
+    "LLVM-21.1.1-win32.exe",
+    "LLVM-21.1.1-Linux-X64.tar.xz",
+    "LLVM-21.1.1-Linux-ARM64.tar.xz"
+  ],
+  "llvmorg-21.1.0": [
+    "clang+llvm-21.1.0-x86_64-pc-windows-msvc.tar.xz",
+    "clang+llvm-21.1.0-armv7a-linux-gnueabihf.tar.gz",
+    "clang+llvm-21.1.0-aarch64-pc-windows-msvc.tar.xz",
+    "LLVM-21.1.0-woa64.exe",
+    "LLVM-21.1.0-win64.exe",
+    "LLVM-21.1.0-win32.exe",
+    "LLVM-21.1.0-Linux-X64.tar.xz",
+    "LLVM-21.1.0-Linux-ARM64.tar.xz"
+  ],
+  "llvmorg-20.1.8": [
+    "clang+llvm-20.1.8-x86_64-pc-windows-msvc.tar.xz",
+    "clang+llvm-20.1.8-armv7a-linux-gnueabihf.tar.gz",
+    "clang+llvm-20.1.8-aarch64-pc-windows-msvc.tar.xz",
+    "LLVM-20.1.8-woa64.exe",
+    "LLVM-20.1.8-win64.exe",
+    "LLVM-20.1.8-win32.exe",
+    "LLVM-20.1.8-macOS-ARM64.tar.xz",
+    "LLVM-20.1.8-Linux-X64.tar.xz",
+    "LLVM-20.1.8-Linux-ARM64.tar.xz"
+  ],
   "llvmorg-20.1.7": [
     "clang+llvm-20.1.7-x86_64-pc-windows-msvc.tar.xz",
+    "clang+llvm-20.1.7-armv7a-linux-gnueabihf.tar.gz",
+    "clang+llvm-20.1.7-aarch64-pc-windows-msvc.tar.xz",
+    "LLVM-20.1.7-woa64.exe",
     "LLVM-20.1.7-win64.exe",
     "LLVM-20.1.7-win32.exe",
     "LLVM-20.1.7-macOS-X64.tar.xz",
@@ -9,12 +80,9 @@
     "LLVM-20.1.7-Linux-ARM64.tar.xz"
   ],
   "llvmorg-20.1.6": [
-    "clang+llvm-20.1.7-armv7a-linux-gnueabihf.tar.gz",
-    "clang+llvm-20.1.7-aarch64-pc-windows-msvc.tar.xz",
     "clang+llvm-20.1.6-x86_64-pc-windows-msvc.tar.xz",
     "clang+llvm-20.1.6-armv7a-linux-gnueabihf.tar.gz",
     "clang+llvm-20.1.6-aarch64-pc-windows-msvc.tar.xz",
-    "LLVM-20.1.7-woa64.exe",
     "LLVM-20.1.6-woa64.exe",
     "LLVM-20.1.6-win64.exe",
     "LLVM-20.1.6-win32.exe",
