--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -28,6 +28,11 @@ jobs:
         with:
           ref: ${{ github.head_ref || github.ref_name }}
 
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: "./.nvmrc"
+
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
