fix: apply patches manually

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "test.docker": "tsx ./dev/docker/ci/tests/index.mts",
     "test": "turbo test && jest --runInBand --forceExit --coverage",
     "build.docker-ci": "node ./dev/docker/ci/docker-ci.mjs",
-    "prepare": "patch-package"
+    "prepare": "bun ./patches/apply.mts"
   },
   "devDependencies": {
     "@actions/cache": "^4.0.2",
@@ -68,6 +68,7 @@
     "@octokit/plugin-rest-endpoint-methods": "^16.0.0",
     "@octokit/rest": "^22.0.0",
     "@octokit/types": "^14.0.0",
+    "@pnpm/patching.apply-patch": "^1000.0.7",
     "@shockpkg/archive-files": "3.2.5",
     "@swc/cli": "^0.7.0",
     "@swc/jest": "^0.2.37",
@@ -115,7 +116,6 @@
     "npm-run-all2": "^8.0.4",
     "numerous": "1.0.3",
     "p-timeout": "^6.1.4",
-    "patch-package": "^8.0.1",
     "path-exists": "^5.0.0",
     "patha": "^0.4.1",
     "prettier": "3.6.2",
