--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -33,21 +33,23 @@ jobs:
         with:
           node-version-file: "./.nvmrc"
 
-      - name: Setup Pnpm
-        uses: pnpm/action-setup@v4
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
+        with:
+          bun-version-file: "package.json"
 
       - name: Install
         run: |
-          pnpm install
+          bun install
 
       - name: Build
         run: |
-          pnpm build
-          pnpm build.docker-ci
+          bun run build
+          bun run build.docker-ci
 
       - name: Lint
         run: |
-          pnpm run test.lint
+          bun run test.lint
 
       - name: Update Dist
         run: |
@@ -88,7 +90,7 @@ jobs:
           - windows-2022
           - ubuntu-22.04
           - ubuntu-22.04-arm
-          - macos-13 # x64
+          - macos-15-intel # x64
           - macos-14 # arm64
     steps:
       - uses: actions/checkout@v6
@@ -103,18 +105,19 @@ jobs:
         with:
           node-version-file: "./.nvmrc"
 
-      - name: Setup Pnpm
-        uses: pnpm/action-setup@v4
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
+        with:
+          bun-version-file: "package.json"
 
       - name: Cache node_modules
         if: ${{ !contains(matrix.os, 'windows') }}
         uses: actions/cache@v4
         with:
           path: |
-            ~/.pnpm-store
-            D:\.pnpm-store
+            ~/.bun
             ./node_modules
-          key: "setupcpp-node_modules-cache-OS:${{ matrix.os }}-${{ hashFiles('./.npmrc', './package.json', './.nvmrc', './pnpm-*.yaml') }}"
+          key: "setupcpp-node_modules-cache-OS:${{ matrix.os }}-${{ hashFiles('./.npmrc', './package.json', './.nvmrc', './bun.lock') }}"
           restore-keys: |
             "setupcpp-node_modules-cache-OS:${{ matrix.os }}-"
 
@@ -134,12 +137,12 @@ jobs:
 
       - name: Install
         run: |
-          pnpm install
+          bun install
 
       # Create self-contained executable that bundles Nodejs
       - name: Create Executable
         run: |
-          pnpm run pack.exe
+          bun run pack.exe
 
       - name: Upload Executables
         uses: actions/upload-artifact@v4
@@ -166,9 +169,8 @@ jobs:
           - macos-15 # arm64
           # - macos-15-large # x64
           - macos-14 # arm64
-          # - macos-14-large # x64
+          - macos-15-intel # x64
           # - macos-14-xlarge #arm64
-          - macos-13 # x64
     steps:
       - uses: actions/checkout@v6
         with:
@@ -184,24 +186,25 @@ jobs:
         with:
           node-version-file: "./.nvmrc"
 
-      - name: Setup Pnpm
-        uses: pnpm/action-setup@v4
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
+        with:
+          bun-version-file: "package.json"
 
       - name: Cache node_modules
         if: ${{ !contains(matrix.os, 'windows') }}
         uses: actions/cache@v4
         with:
           path: |
-            ~/.pnpm-store
-            D:\.pnpm-store
+            ~/.bun
             ./node_modules
-          key: "setupcpp-node_modules-cache-OS:${{ matrix.os }}-${{ hashFiles('./.npmrc', './package.json', './.nvmrc', './pnpm-*.yaml') }}"
+          key: "setupcpp-node_modules-cache-OS:${{ matrix.os }}-${{ hashFiles('./.npmrc', './package.json', './.nvmrc', './bun.lock') }}"
           restore-keys: |
             "setupcpp-node_modules-cache-OS:${{ matrix.os }}-"
 
       - name: Install
         run: |
-          pnpm install
+          bun install
 
       # - name: Setup SSH debugging session
       #   uses: mxschmitt/action-tmate@v3
@@ -209,7 +212,7 @@ jobs:
       - name: Tests
         if: ${{ !contains(github.event.head_commit.message, '[skip test]') }}
         run: |
-          pnpm run test
+          bun run test
         env:
           RUNNER_OS_NAME: ${{ matrix.os }}
 
