--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build.cli.legacy": "cross-env NODE_ENV=production vite build --mode cli-legacy",
     "build.library": "cross-env NODE_ENV=production vite build --mode library",
     "build.types.modern": "tsc -p ./tsconfig.types.json",
-    "build.json": "shx cp ./src/*/*.json ./dist/legacy/ && shx cp ./dist/legacy/*.json ./dist/modern && minijson --file \"dist/**/*.json\"",
+    "build.json": "shx cp ./src/*/*.json ./dist/legacy/ && shx cp ./dist/legacy/*.json ./dist/modern && bun ./node_modules/@aminya/minijson/dist/cli.js --file \"dist/**/*.json\"",
     "build.bash": "shx cp ./src/*/*.bash ./dist/legacy/ && shx cp ./dist/legacy/*.bash ./dist/modern",
     "bump": "ncu -u -x execa,numerous,eslint,@types/eslint,which && pnpm update && pnpx typesync && pnpm run clean",
     "bump.llvm": "tsx ./src/llvm/assets-list.ts",
@@ -31,7 +31,7 @@
     "dev": "run-p build.json dev.packages dev.root.tsc dev.vite",
     "docs": "shx rm -rf packages/*/README.md && pnpm -r exec readme --path ../../dev/readme/template.md -y && pnpm -r exec ts-readme",
     "format": "run-s lint.dprint",
-    "lint": "turbo lint && run-p --aggregate-output --continue-on-error lint.**",
+    "lint": "turbo lint && run-p --aggregate-output -c 'lint.*'",
     "lint.cspell": "cspell lint --no-progress --show-suggestions --cache --cache-location ./.cache/cspell/.cspellcache",
     "lint.biome": "biome check --write --unsafe",
     "lint.dprint": "dprint fmt",
@@ -40,19 +40,20 @@
     "pack.exe": "shx rm -rf ./dist/tsconfig.tsbuildinfo && node ./dev/scripts/pack-exe.mjs",
     "publish.all": "pnpm -r publish",
     "prepublishOnly": "run-s build && shx rm ./dist/tsconfig.tsbuildinfo",
-    "test.lint": "run-p --aggregate-output --continue-on-error test.lint.** lint.cspell lint.root.tsc",
+    "test.lint": "run-p --aggregate-output -c 'test.lint.*' lint.cspell lint.root.tsc",
     "test.lint.root.eslint": "eslint './{src,dev}/**/*.{ts,tsx,js,jsx,cjs,mjs,json,yaml}' --no-error-on-unmatched-pattern --cache --cache-location ./.cache/eslint/",
     "test.lint.biome": "biome check",
     "test.lint.dprint": "dprint check",
     "test.docker": "tsx ./dev/docker/ci/tests/index.mts",
     "test": "turbo test && jest --runInBand --forceExit --coverage",
-    "build.docker-ci": "node ./dev/docker/ci/docker-ci.mjs"
+    "build.docker-ci": "node ./dev/docker/ci/docker-ci.mjs",
+    "prepare": "bun ./patches/apply.mts"
   },
   "devDependencies": {
     "@actions/cache": "^4.0.2",
     "@actions/core": "^1.11.1",
     "@actions/exec": "^1.1.1",
-    "@actions/http-client": "^2.2.3",
+    "@actions/http-client": "2.2.3",
     "@actions/io": "^1.1.3",
     "@actions/tool-cache": "^2.0.2",
     "@aminya/minijson": "1.1.3",
@@ -67,6 +68,7 @@
     "@octokit/plugin-rest-endpoint-methods": "^16.0.0",
     "@octokit/rest": "^22.0.0",
     "@octokit/types": "^14.0.0",
+    "@pnpm/patching.apply-patch": "^1000.0.7",
     "@shockpkg/archive-files": "3.2.5",
     "@swc/cli": "^0.7.0",
     "@swc/jest": "^0.2.37",
@@ -81,7 +83,7 @@
     "@types/node": "^22.13.8",
     "@types/semver": "^7.5.8",
     "@types/which": "^3.0.4",
-    "@upleveled/babel-plugin-remove-node-prefix": "github:aminya/babel-plugin-remove-node-prefix#02526f866c4f57d3a097590942dc0e700fb3eb15",
+    "@upleveled/babel-plugin-remove-node-prefix": "github:aminya/babel-plugin-remove-node-prefix",
     "admina": "^1.0.1",
     "caxa": "^3.0.1",
     "ci-info": "^4.1.0",
@@ -90,7 +92,7 @@
     "cross-spawn": "^7.0.6",
     "cspell": "^9.0.0",
     "diagnostics_channel": "^1.1.0",
-    "dprint": "^0.50.0",
+    "dprint": "^0.51.1",
     "envosman": "workspace:*",
     "escape-path-with-spaces": "^1.0.2",
     "escape-quotes": "^1.0.2",
@@ -103,15 +105,15 @@
     "fs-extra": "^11.3.0",
     "is-url-online": "^1.5.0",
     "jest": "^29.7.0",
-    "lefthook": "^1.11.2",
+    "lefthook": "^2.0.14",
     "macos-release": "^3.3.0",
     "memoizee": "^0.4.17",
     "mkdirp": "^3.0.1",
     "mri": "^1.2.0",
-    "msvc-dev-cmd": "github:aminya/msvc-dev-cmd#c01f519bd995460228ed3dec4df51df92dc290fd",
+    "msvc-dev-cmd": "github:aminya/msvc-dev-cmd",
     "node-downloader-helper": "2.1.9",
-    "npm-check-updates": "^18.0.0",
-    "npm-run-all2": "^8.0.0",
+    "npm-check-updates": "^19.3.1",
+    "npm-run-all2": "^8.0.4",
     "numerous": "1.0.3",
     "p-timeout": "^6.1.4",
     "path-exists": "^5.0.0",
@@ -127,20 +129,20 @@
     "setup-alpine": "workspace:*",
     "setup-apt": "workspace:*",
     "setup-brew": "workspace:*",
-    "setup-python": "github:aminya/setup-python#9700887",
+    "setup-python": "github:aminya/setup-python",
     "shx": "0.4.0",
     "simple-update-notifier": "^2.0.0",
-    "time-delta": "github:aminya/time-delta#69d91a4",
+    "time-delta": "github:aminya/time-delta",
     "timers-browserify": "^2.0.12",
     "ts-node": "^10.9.2",
     "ts-readme": "^1.1.3",
     "tsx": "^4.20.3",
-    "turbo": "2.5.4",
+    "turbo": "2.7.4",
     "typescript": "^5.8.2",
     "ubuntu-version": "^2.0.0",
     "untildify-user": "workspace:*",
     "util.types": "^0.0.2",
-    "vite": "^6.2.0",
+    "vite": "^7.3.1",
     "vite-plugin-babel": "^1.3.0",
     "web-streams-polyfill": "^4.1.0",
     "which": "^4.0.0"
@@ -187,11 +189,14 @@
     "mri",
     "simple-update-notifier"
   ],
+  "overrides": {
+    "sort-package-json": "github:aminya/sort-package-json"
+  },
   "engines": {
     "node": ">=12.x",
-    "pnpm": "^10"
+    "bun": ">=1.3.6"
   },
-  "packageManager": "pnpm@10.21.0",
+  "packageManager": "bun@1.3.6",
   "workspaces": [
     "packages/*"
   ],
@@ -213,10 +218,5 @@
     "cmake",
     "ninja",
     "meson"
-  ],
-  "pnpm": {
-    "patchedDependencies": {
-      "@actions/http-client@2.2.3": "patches/@actions__http-client@2.2.3.patch"
-    }
-  }
+  ]
 }
